마이페이지 밸런스게임 관련 미동작 버그 해결 (#666)
* feat: 내가 작성한 밸런스게임 조회를 Game -> GameSet 리포지토리에서 동작하도록 수정

* feat: GameSet 엔티티에 editedAt 필드 추가

* feat: 밸런스게임 수정 시 밸런스게임 세트 editedAt 필드 업데이트 처리

* fix: 내가 작성한 밸런스게임 서비스 로직 주석 제거 및 DTO 리팩토링

* fix: SonarQube CodeSmell Fix

* feat: 리뷰사항 반영

* fix: CheckStyle 반영